update minimal JDK, add notes regarding warnings when using JDK > 8